native/sentinel.h

typedef struct { const char *p; ptrdiff_t n; } _GoString_;
typedef signed char GoInt8;
typedef unsigned char GoUint8;
typedef short GoInt16;
typedef unsigned short GoUint16;
typedef int GoInt32;
typedef unsigned int GoUint32;
typedef long long GoInt64;
typedef unsigned long long GoUint64;
typedef GoInt64 GoInt;
typedef GoUint64 GoUint;
typedef size_t GoUintptr;
typedef float GoFloat32;
typedef double GoFloat64;
typedef _Fcomplex GoComplex64;
typedef _Dcomplex GoComplex128;
typedef std::complex<float> GoComplex64;
typedef std::complex<double> GoComplex128;
typedef float _Complex GoComplex64;
typedef double _Complex GoComplex128;
typedef _GoString_ GoString;
typedef void *GoMap;
typedef void *GoChan;
typedef struct { void *t; void *v; } GoInterface;
typedef struct { void *data; GoInt len; GoInt cap; } GoSlice;
// Save a captured region to a file (PNG). This uses robotgo.ToImage + robotgo.Save (or bitmap.Save).
//
extern void SaveBitmapToFile(int x, int y, int w, int h, char* path, long long int port);
extern void SaveCaptureRegion(char* path, int x, int y, int w, int h, long long int port);
extern void SaveCaptureFull(char* path, long long int port);
extern void BitmapOpenFind(char* path, long long int port);
extern void BitmapFindAllFromFile(char* path, long long int port);
extern void MoveToFoundFromFile(char* path, long long int port);
extern void HookRegisterCombo(char* mods, char* key, long long int port);
extern void HookStart(long long int port);
extern void HookStop(void);
extern void HookAddEvent(char* name, long long int port);
// convenience debug helper: decode image file and return width/height
//
extern void DecodeAndReportImageSize(char* path, long long int port);
extern long long int StartMonitor(long long int port);
extern void ControlService(char* name, char* action, long long int port);