lib/bindings/generated_bindings.dart


  late final _SaveBitmapToFilePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Pointer<ffi.Char>,
            ffi.LongLong,
          )
        >
      >('SaveBitmapToFile');
  late final _SaveBitmapToFile =
      _SaveBitmapToFilePtr.asFunction<
        void Function(int, int, int, int, ffi.Pointer<ffi.Char>, int)
      >();

  void SaveCaptureRegion(
    ffi.Pointer<ffi.Char> path,
    int x,
    int y,
    int w,
    int h,
    int port,
  ) {
    return _SaveCaptureRegion(path, x, y, w, h, port);
  }

  late final _SaveCaptureRegionPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<ffi.Char>,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.LongLong,
          )
        >
      >('SaveCaptureRegion');
  late final _SaveCaptureRegion =
      _SaveCaptureRegionPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, int, int, int, int, int)
      >();

  void SaveCaptureFull(ffi.Pointer<ffi.Char> path, int port) {
    return _SaveCaptureFull(path, port);
  }

  late final _SaveCaptureFullPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.LongLong)
        >
      >('SaveCaptureFull');
  late final _SaveCaptureFull =
      _SaveCaptureFullPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, int)
      >();

  void BitmapOpenFind(ffi.Pointer<ffi.Char> path, int port) {
    return _BitmapOpenFind(path, port);
  }

  late final _BitmapOpenFindPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.LongLong)
        >
      >('BitmapOpenFind');
  late final _BitmapOpenFind =
      _BitmapOpenFindPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, int)
      >();

  void BitmapFindAllFromFile(ffi.Pointer<ffi.Char> path, int port) {
    return _BitmapFindAllFromFile(path, port);
  }

  late final _BitmapFindAllFromFilePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.LongLong)
        >
      >('BitmapFindAllFromFile');
  late final _BitmapFindAllFromFile =
      _BitmapFindAllFromFilePtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, int)
      >();

  void MoveToFoundFromFile(ffi.Pointer<ffi.Char> path, int port) {
    return _MoveToFoundFromFile(path, port);
  }

  late final _MoveToFoundFromFilePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.LongLong)
        >
      >('MoveToFoundFromFile');
  late final _MoveToFoundFromFile =
      _MoveToFoundFromFilePtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, int)
      >();

  void HookRegisterCombo(
    ffi.Pointer<ffi.Char> mods,
    ffi.Pointer<ffi.Char> key,
    int port,
  ) {
    return _HookRegisterCombo(mods, key, port);
  }

  late final _HookRegisterComboPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.LongLong,
          )
        >
      >('HookRegisterCombo');
  late final _HookRegisterCombo =
      _HookRegisterComboPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int)
      >();

  void HookStart(int port) {
    return _HookStart(port);
  }

  late final _HookStartPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.LongLong)>>('HookStart');
  late final _HookStart = _HookStartPtr.asFunction<void Function(int)>();

  void HookStop() {
    return _HookStop();
  }

  late final _HookStopPtr = _lookup<ffi.NativeFunction<ffi.Void Function()>>(
    'HookStop',
  );
  late final _HookStop = _HookStopPtr.asFunction<void Function()>();

  void HookAddEvent(ffi.Pointer<ffi.Char> name, int port) {
    return _HookAddEvent(name, port);
  }

  late final _HookAddEventPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.LongLong)
        >
      >('HookAddEvent');
  late final _HookAddEvent =
      _HookAddEventPtr.asFunction<void Function(ffi.Pointer<ffi.Char>, int)>();

  void DecodeAndReportImageSize(ffi.Pointer<ffi.Char> path, int port) {
    return _DecodeAndReportImageSize(path, port);
  }

  late final _DecodeAndReportImageSizePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.LongLong)
        >
      >('DecodeAndReportImageSize');
  late final _DecodeAndReportImageSize =
      _DecodeAndReportImageSizePtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, int)
      >();

  int StartMonitor(int port) {
    return _StartMonitor(port);
  }

  late final _StartMonitorPtr =
      _lookup<ffi.NativeFunction<ffi.LongLong Function(ffi.LongLong)>>(
        'StartMonitor',
      );
  late final _StartMonitor = _StartMonitorPtr.asFunction<int Function(int)>();

  void ControlService(
    ffi.Pointer<ffi.Char> name,
    ffi.Pointer<ffi.Char> action,
    int port,
  ) {
    return _ControlService(name, action, port);
  }

  late final _ControlServicePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.LongLong,
          )
        >
      >('ControlService');
  late final _ControlService =
      _ControlServicePtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int)
      >();
}

typedef va_list = ffi.Pointer<ffi.Char>;
typedef ptrdiff_t = ffi.LongLong;
typedef Dartptrdiff_t = int;
typedef errno_t = ffi.Int;
typedef Darterrno_t = int;
typedef wint_t = ffi.UnsignedShort;
typedef Dartwint_t = int;
typedef wctype_t = ffi.UnsignedShort;
typedef Dartwctype_t = int;
typedef __time32_t = ffi.Long;
typedef Dart__time32_t = int;
typedef __time64_t = ffi.LongLong;
typedef Dart__time64_t = int;

final class __crt_locale_data_public extends ffi.Struct {
  external ffi.Pointer<ffi.UnsignedShort> _locale_pctype;

  @ffi.Int()
  external int _locale_mb_cur_max;

  @ffi.UnsignedInt()
  external int _locale_lc_codepage;
}

final class __crt_locale_data extends ffi.Opaque {}

final class __crt_multibyte_data extends ffi.Opaque {}

final class __crt_locale_pointers extends ffi.Struct {
  external ffi.Pointer<__crt_locale_data> locinfo;

  external ffi.Pointer<__crt_multibyte_data> mbcinfo;
}

typedef _locale_t = ffi.Pointer<__crt_locale_pointers>;

final class _Mbstatet extends ffi.Struct {
  @ffi.UnsignedLong()
  external int _Wchar;

  @ffi.UnsignedShort()
  external int _Byte;

  @ffi.UnsignedShort()
  external int _State;
}

typedef mbstate_t = _Mbstatet;
typedef time_t = __time64_t;
typedef rsize_t = ffi.Size;
typedef Dartrsize_t = int;

final class _GoString_ extends ffi.Struct {
  external ffi.Pointer<ffi.Char> p;

  @ptrdiff_t()
  external int n;
}

typedef int_least8_t = ffi.SignedChar;
typedef Dartint_least8_t = int;
typedef int_least16_t = ffi.Short;
typedef Dartint_least16_t = int;
typedef int_least32_t = ffi.Int;
typedef Dartint_least32_t = int;
typedef int_least64_t = ffi.LongLong;
typedef Dartint_least64_t = int;
typedef uint_least8_t = ffi.UnsignedChar;
typedef Dartuint_least8_t = int;
typedef uint_least16_t = ffi.UnsignedShort;
typedef Dartuint_least16_t = int;
typedef uint_least32_t = ffi.UnsignedInt;
typedef Dartuint_least32_t = int;
typedef uint_least64_t = ffi.UnsignedLongLong;
typedef Dartuint_least64_t = int;
typedef int_fast8_t = ffi.SignedChar;
typedef Dartint_fast8_t = int;
typedef int_fast16_t = ffi.Int;
typedef Dartint_fast16_t = int;
typedef int_fast32_t = ffi.Int;
typedef Dartint_fast32_t = int;
typedef int_fast64_t = ffi.LongLong;
typedef Dartint_fast64_t = int;
typedef uint_fast8_t = ffi.UnsignedChar;
typedef Dartuint_fast8_t = int;
typedef uint_fast16_t = ffi.UnsignedInt;
typedef Dartuint_fast16_t = int;
typedef uint_fast32_t = ffi.UnsignedInt;
typedef Dartuint_fast32_t = int;
typedef uint_fast64_t = ffi.UnsignedLongLong;
typedef Dartuint_fast64_t = int;
typedef intmax_t = ffi.LongLong;
typedef Dartintmax_t = int;
typedef uintmax_t = ffi.UnsignedLongLong;
typedef Dartuintmax_t = int;
typedef GoInt8 = ffi.SignedChar;
typedef DartGoInt8 = int;
typedef GoUint8 = ffi.UnsignedChar;
typedef DartGoUint8 = int;
typedef GoInt16 = ffi.Short;
typedef DartGoInt16 = int;
typedef GoUint16 = ffi.UnsignedShort;
typedef DartGoUint16 = int;
typedef GoInt32 = ffi.Int;
typedef DartGoInt32 = int;
typedef GoUint32 = ffi.UnsignedInt;
typedef DartGoUint32 = int;
typedef GoInt64 = ffi.LongLong;
typedef DartGoInt64 = int;
typedef GoUint64 = ffi.UnsignedLongLong;
typedef DartGoUint64 = int;
typedef GoInt = GoInt64;
typedef GoUint = GoUint64;
typedef GoUintptr = ffi.Size;
typedef DartGoUintptr = int;
typedef GoFloat32 = ffi.Float;
typedef DartGoFloat32 = double;
typedef GoFloat64 = ffi.Double;
typedef DartGoFloat64 = double;

final class _C_double_complex extends ffi.Struct {
  @ffi.Array.multi([2])
  external ffi.Array<ffi.Double> _Val;
}

final class _C_float_complex extends ffi.Struct {
  @ffi.Array.multi([2])
  external ffi.Array<ffi.Float> _Val;
}

final class _C_ldouble_complex extends ffi.Opaque {}

typedef _Dcomplex = _C_double_complex;
typedef _Fcomplex = _C_float_complex;
typedef _Lcomplex = _C_ldouble_complex;
typedef GoComplex64 = _Fcomplex;
typedef GoComplex128 = _Dcomplex;
typedef GoString = _GoString_;
typedef GoMap = ffi.Pointer<ffi.Void>;
typedef GoChan = ffi.Pointer<ffi.Void>;

final class GoInterface extends ffi.Struct {
  external ffi.Pointer<ffi.Void> t;

  external ffi.Pointer<ffi.Void> v;
}

final class GoSlice extends ffi.Struct {
  external ffi.Pointer<ffi.Void> data;

  @GoInt()
  external int len;

  @GoInt()
  external int cap;
}

const int _VCRT_COMPILER_PREPROCESSOR = 1;

const int _SAL_VERSION = 20;

const int __SAL_H_VERSION = 180000000;

const int _USE_DECLSPECS_FOR_SAL = 0;

const int _USE_ATTRIBUTES_FOR_SAL = 0;

const int _CRT_PACKING = 8;

const int _VCRUNTIME_DISABLED_WARNINGS = 4514;

const int _HAS_EXCEPTIONS = 1;

const int _WCHAR_T_DEFINED = 1;

const int NULL = 0;

const int _HAS_CXX17 = 0;

const int _HAS_CXX20 = 0;

const int _HAS_CXX23 = 0;

const int _HAS_CXX26 = 0;

const int _HAS_NODISCARD = 1;

const int _ARM_WINAPI_PARTITION_DESKTOP_SDK_AVAILABLE = 1;

const int _CRT_BUILD_DESKTOP_APP = 1;

const int _UCRT_DISABLED_WARNINGS = 4324;

const int _ARGMAX = 100;

const int _TRUNCATE = -1;

const int _CRT_INT_MAX = 2147483647;

const int _CRT_SIZE_MAX = -1;

const String __FILEW__ = 'C';

const int _CRT_FUNCTIONS_REQUIRED = 1;

const int _CRT_HAS_CXX17 = 0;

const int _CRT_HAS_C11 = 0;

const int _CRT_INTERNAL_NONSTDC_NAMES = 1;

const int __STDC_SECURE_LIB__ = 200411;

const int __GOT_SECURE_LIB__ = 200411;

const int __STDC_WANT_SECURE_LIB__ = 1;

const int _SECURECRT_FILL_BUFFER_PATTERN = 254;

const int _CRT_SECURE_CPP_OVERLOAD_STANDARD_NAMES = 0;

const int _CRT_SECURE_CPP_OVERLOAD_STANDARD_NAMES_COUNT = 0;

const int _CRT_SECURE_CPP_OVERLOAD_SECURE_NAMES = 1;

const int _CRT_SECURE_CPP_OVERLOAD_STANDARD_NAMES_MEMORY = 0;

const int _CRT_SECURE_CPP_OVERLOAD_SECURE_NAMES_MEMORY = 0;

const int _STATIC_INLINE_UCRT_FUNCTIONS = 0;

const int INT8_MIN = -128;

const int INT16_MIN = -32768;

const int INT32_MIN = -2147483648;

const int INT64_MIN = -9223372036854775808;

const int INT8_MAX = 127;

const int INT16_MAX = 32767;

const int INT32_MAX = 2147483647;

const int INT64_MAX = 9223372036854775807;

const int UINT8_MAX = 255;

const int UINT16_MAX = 65535;

const int UINT32_MAX = 4294967295;

const int UINT64_MAX = -1;

const int INT_LEAST8_MIN = -128;

const int INT_LEAST16_MIN = -32768;

const int INT_LEAST32_MIN = -2147483648;

const int INT_LEAST64_MIN = -9223372036854775808;

const int INT_LEAST8_MAX = 127;

const int INT_LEAST16_MAX = 32767;

const int INT_LEAST32_MAX = 2147483647;
